--- a/project/src/about.html
+++ b/project/src/about.html
@@ -35,6 +35,7 @@
     <body>
         <body>
             <div class="root"></div>
+            <script src="./vue.js"></script>
             <script src="../pages/about.js" type="module"></script>
         </body>
     </body>
