--- a/project/src/checkout.html
+++ b/project/src/checkout.html
@@ -34,6 +34,7 @@
 
     <body>
         <div class="root"></div>
+        <script src="./vue.js"></script>
         <script src="../pages/checkout.js" type="module"></script>
     </body>
 </html>
