--- a/project/src/index.html
+++ b/project/src/index.html
@@ -34,6 +34,7 @@
 
     <body class="">
         <div class="root"></div>
+        <script src="./vue.js"></script>
         <script src="../pages/index.js" type="module"></script>
     </body>
 </html>
