--- a/project/src/catalog.html
+++ b/project/src/catalog.html
@@ -35,12 +35,8 @@
     <body>
         <body>
             <div class="root"></div>
-            <!-- <script src="../pages/catalog.js" type="module"></script> -->
             <script src="./vue.js"></script>
-            <script
-                src="../components/vuePages/catalog.js"
-                type="module"
-            ></script>
+            <script src="../pages/catalog.js" type="module"></script>
         </body>
     </body>
 </html>
