--- a/project/src/checkout.html
+++ b/project/src/checkout.html
@@ -34,7 +34,7 @@
 
     <body>
         <div class="root"></div>
-        <script src="./vue.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
         <script src="../pages/checkout.js" type="module"></script>
     </body>
 </html>
