--- a/project/src/contacts.html
+++ b/project/src/contacts.html
@@ -35,7 +35,7 @@
     <body>
         <body>
             <div class="root"></div>
-            <script src="./vue.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
             <script src="../pages/contacts.js" type="module"></script>
         </body>
     </body>
